k8/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app
spec:
  rules:
  - host: go-web-app.local
    http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: go-web-app
            port:
              number: 80
  - host: "*.foo.com"
    http:
      paths:
      - pathType: Prefix
        path: "/foo"
        backend:
          service:
            name: go-web-app
            port:
              number: 80
